force-app/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <description>Approved or proposed assignment of resources to an incident/request.</description>
    <label>Allocation</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>