force-app/main/default/objects/Allocation__c/fields/Allocation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Plan__c</fullName>
    <label>Allocation Plan</label>
    <referenceTo>Allocation_Plan__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>