force-app/main/default/objects/Allocation__c/fields/Relief_Resource__c.field-meta.xml
<CustomField>
    <fullName>Relief_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relief Resource</label>
    <referenceTo>Relief_Resource__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>