force-app/main/default/objects/Allocation__c/fields/Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Request</label>
    <referenceTo>Resource_Request__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>